// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should transform epxort-default-object.tsx with memo 1`] = `

File: epxort-default-object.tsx
TypeScript before transform:

  import * as React from 'react'
  
  export default class A1 extends React.PureComponent {
    render() {
      return <div>Foo</div>
    }
  }
  

      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:

  import { memo as react_memo_1 } from "react";
  import * as React from 'react';
  function rewrited_pure_class_A1_1(rewrited_props_1: any) {
    let ctx_1 = { props: rewrited_props_1 };
    Object.assign(ctx_1, {});
    return <div>Foo</div>;
  }
  export default react_memo_1(rewrited_pure_class_A1_1);
  

`;

exports[`should transform epxort-default-object.tsx without memo 1`] = `

File: epxort-default-object.tsx
TypeScript before transform:

  import * as React from 'react'
  
  export default class A1 extends React.PureComponent {
    render() {
      return <div>Foo</div>
    }
  }
  

      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:

  import * as React from 'react';
  function rewrited_pure_class_A1_1(rewrited_props_1: any) {
    let ctx_1 = { props: rewrited_props_1 };
    Object.assign(ctx_1, {});
    return <div>Foo</div>;
  }
  export default rewrited_pure_class_A1_1;
  

`;
